--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 pillow = "^10.4.0"
 psycopg2-binary = "^2.9.9"
 django = "^5.1.1"
+djangorestframework = "^3.15.2"
+djangorestframework-simplejwt = "^5.3.1"
 
 
 [build-system]
